[package]
name = "samira"
version = "0.1.0"
authors = ["Paul COMTE <paul.codepro@gmail.com>"]
repository = "https://github.com/RqndomHax/Samira"
description = "League of Legends API Library"
readme = "README.md"
license = "GNU General Public License v3.0"
include = [ "src/**", "README.md" ]
keywords = [ "riot-games", "riot", "api", "league", "league-of-legends", "lol" ]
categories = [ "api-bindings", "web-programming::http-client" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
