[package]
name = "samira"
version = "0.1.0"
authors = ["Paul COMTE <paul.codepro@gmail.com>"]
repository = "https://github.com/RqndomHax/Samira"
description = "League of Legends API Library"
readme = "README.md"
license = "AGPL-3.0-or-later"
include = [ "src/**", "README.md" ]
keywords = [ "riot-games", "riot", "league", "league-of-legends", "lol" ]
categories = [ "api-bindings", "web-programming::http-client" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.137"

[dependencies.ureq]
version = "2.4.0"
features = ["json"]
